# gstreamer-vit-tracker

./: Cargo.toml  build.rs
src/: app_state.rs  drawing.rs  drawing_rgb.rs  fps_analyzer.rs  frame.rs  main.rs  main_1.rs  main_2.rs  main_4.rs  main_5.rs  nv12_convert.rs  pipeline.rs  pipeline_ir.rs  raw_mode_guard.rs  rga.rs  selection_state.rs  timing_stats.rs  tracker_context.rs  user_commands.rs
